<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LanguageApp</string>
    <string name="btn_build_cqcode">QR Code</string>
    <string name="btn_enter_wifi">WiFi</string>
    <string name="btn_enter_setting">Settings</string>
    <string name="btn_lan_jump" tools:ignore="ExtraTranslation">language setting</string>
    <string name="btn_lan_auto" tools:ignore="MissingTranslation">Auto</string>
    <string name="btn_lan_en">English</string>
    <string name="btn_lan_cn">Chinese</string>
    <string name="btn_lan_save" tools:ignore="ExtraTranslation">save</string>
</resources>