<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7991e3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="4"
        android:id="@+id/layout_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center">
        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|left">
            <RadioButton
                android:id="@+id/rb_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_lan_auto"
                android:textStyle="bold"
                android:textColor="#deffff"
                android:textSize="30sp"
                android:layout_margin="20sp"/>
            <RadioButton
                android:id="@+id/rb_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_lan_en"
                android:textStyle="bold"
                android:textColor="#deffff"
                android:textSize="30sp"
                android:layout_margin="20sp"/>
            <RadioButton
                android:id="@+id/rb_cn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_lan_cn"
                android:textStyle="bold"
                android:textColor="#deffff"
                android:textSize="30sp"
                android:layout_margin="20sp"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="right">
        <Button
            android:background="@color/purple_700"
            android:textColor="#deffff"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/btn_lan_save"
            android:id="@+id/btn_language_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20sp"
            />
    </LinearLayout>
</LinearLayout>