<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#7991e3"
    >

<!--build QRcode-->
    <ImageView
        android:layout_margin="30dp"
        android:id="@+id/iv_cqcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />
<!--    first line:icon-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <Button
                    android:background="@drawable/ic_wifi"
                    android:layout_margin="30dp"
                    android:id="@+id/btn_enter_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:background="@drawable/ic_qrcode"
                    android:layout_margin="30dp"
                    android:id="@+id/btn_build_cqcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:background="@drawable/ic_setting"
                    android:layout_margin="30dp"
                    android:id="@+id/btn_enter_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_enter_wifi"
                    android:textSize="30sp"
                    android:textColor="#deffff"/>
                <TextView
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="#deffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_build_cqcode"
                    android:textSize="30sp"/>
                <TextView
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="#deffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_enter_setting"
                    android:textSize="30sp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rb_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_lan_auto"
                android:textStyle="bold"
                android:textColor="#deffff"
                android:textSize="30sp"
                android:layout_margin="5sp"/>
            <RadioButton
                android:id="@+id/rb_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_lan_en"
                android:textStyle="bold"
                android:textColor="#deffff"
                android:textSize="30sp"
                android:layout_margin="5sp"/>
            <RadioButton
                android:id="@+id/rb_cn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_lan_cn"
                android:textStyle="bold"
                android:textColor="#deffff"
                android:textSize="30sp"
                android:layout_margin="5sp"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>